crates/mehen-markdown/tests/snapshots/markdown__assert_fixture_snapshot@readme_en.md.snap
---
source: crates/mehen-markdown/tests/markdown.rs
---
path: "<fixture_path>"
loc:
  dloc: 32
  ploc: 21
  cloc: 0
  tloc: 0
  mloc: 0
  bloc: 11
  aloc: 0
loc_ratios:
  artifact_line_ratio: 0
  code_line_ratio: 0
  table_line_ratio: 0
  math_line_ratio: 0
  blank_line_ratio: 0.34375
size:
  words: 149
  effective_content_units: 0.6208333333333333
  sections: 5
  headings: 5
ecu_inputs:
  table_cells: 0
  diagram_nodes: 0
  diagram_edges: 0
  math_tokens: 0
  raw_html_or_mdx_lines: 0
sections:
  - section_id: 0
    heading_level: 1
    heading_text: ~
    start_line: 1
    end_line: 32
    parent_section_id: ~
    child_section_ids:
      - 1
      - 2
      - 3
      - 4
    word_count: 21
    block_count: 1
  - section_id: 1
    heading_level: 2
    heading_text: ~
    start_line: 7
    end_line: 10
    parent_section_id: 0
    child_section_ids: []
    word_count: 20
    block_count: 1
  - section_id: 2
    heading_level: 2
    heading_text: ~
    start_line: 12
    end_line: 19
    parent_section_id: 0
    child_section_ids: []
    word_count: 46
    block_count: 2
  - section_id: 3
    heading_level: 2
    heading_text: ~
    start_line: 21
    end_line: 27
    parent_section_id: 0
    child_section_ids: []
    word_count: 45
    block_count: 2
  - section_id: 4
    heading_level: 2
    heading_text: ~
    start_line: 29
    end_line: 32
    parent_section_id: 0
    child_section_ids: []
    word_count: 17
    block_count: 1
complexity:
  reading_path_complexity: 1
  reading_path_complexity_raw: 4
  cognitive_complexity: 0.2
  halstead:
    operators_distinct: 3
    operators_total: 22
    operands_distinct: 126
    operands_total: 155
    vocabulary: 129
    length: 177
    volume: 1240.987224209916
    difficulty: 1.8452380952380953
    effort: 2289.9169018159164
    embedded_volume: 0
    total_volume: 1240.987224209916
links:
  total: 0
  internal: 0
  relative: 0
  external: 0
  external_vendor: 0
  scholarly: 0
  issue_pr: 0
  absolute_same_repo: 0
  image: 0
  footnote: 0
  bare_url: 0
  broken: 0
  link_debt_score: 0
  information_scent_score: 0
  review_burden: 0
visuals:
  images: 0
  diagrams: 0
  diagram_nodes_total: 0
  diagram_edges_total: 0
  diagram_cycles_total: 0
  visual_scaffold_score: 0
  visual_net_effect: 0
tables:
  count: 0
  max_cells: 0
  table_burden_score: 0
  table_scaffold_score: 0
  hard_warnings: 0
maintainability:
  documentation_maintainability_index: 90.75999999999999
  section_balance_score: 0.88
  good_scaffold_score: 0
  artifact_debt_score: 0
grounding:
  repository_grounding_score: 0
  evidence_coverage_score: 0
ai_era:
  filler_lazy_structure_risk: 0.67
  labels:
    - large-unanchored-prose
    - low-artifact-density
    - low-repository-grounding
    - specificity-scarcity
  top_contributors:
    - - large-unanchored-prose
      - 1
    - - low-artifact-density
      - 1
    - - low-repository-grounding
      - 1
review:
  review_criticality_index: 0
artifacts: []
prose:
  language_detection:
    dominant_language: en
    blocks:
      - start_line: 1
        end_line: 1
        language: en
      - start_line: 3
        end_line: 5
        language: en
      - start_line: 7
        end_line: 7
        language: en
      - start_line: 9
        end_line: 10
        language: en
      - start_line: 12
        end_line: 12
        language: en
      - start_line: 14
        end_line: 16
        language: en
      - start_line: 18
        end_line: 19
        language: en
      - start_line: 21
        end_line: 21
        language: en
      - start_line: 23
        end_line: 24
        language: en
      - start_line: 26
        end_line: 27
        language: en
      - start_line: 29
        end_line: 29
        language: en
      - start_line: 31
        end_line: 32
        language: en
  english:
    readability:
      flesch_reading_ease: 43.453
      flesch_kincaid_grade: 8.96
      gunning_fog: 10.272
      smog: ~
      ari: 9.258
      coleman_liau: 13.911
      dale_chall_new: 10.365
      dale_chall_list: ngsl-1.2
      forcast: 13.2
      lix: 48.117
      rix: 2.909
      ensemble_grade_band:
        - 8.96
        - 13.911
    lexical:
      mattr_50: 0.864
      hapax_ratio: 0.85
      dis_ratio: 0.1
      lexical_density: 0.673
      avg_sentence_words: 7.091
      p90_sentence_words: 12
      max_sentence_words: 16
      stddev_sentence_words: 4.067
      avg_word_chars: 5.769
      p90_word_chars: 9
      sentence_count: 22
      words_total: 156
    wording:
      passive_ratio: 0.091
      hedge_density: 0.019
      weasel_density: 0
      wordy_density: 0.006
      adverb_density: 0.006
      nominalization_density: 0.058
      expletive_count: 1
      lexical_illusions: 0
      cliche_density: 0
      nonword_count: 0
      long_sentence_count: 0
      wording_quality_score: 1
    inclusive_language:
      flags: []
      inclusive_language_score: 1
      flag_count: 0
    short_doc_warning: false
  japanese: ~
  meta:
    short_doc_warning: false
    words_counted: 156
    sentences_counted: 22
    blocks_stripped: []
