crates/mehen-markdown/tests/snapshots/markdown__assert_fixture_snapshot@short_doc.md.snap
---
source: src/markdown/tests/mod.rs
---
path: "<fixture_path>"
loc:
  dloc: 4
  ploc: 3
  cloc: 0
  tloc: 0
  mloc: 0
  bloc: 1
  aloc: 0
loc_ratios:
  artifact_line_ratio: 0
  code_line_ratio: 0
  table_line_ratio: 0
  math_line_ratio: 0
  blank_line_ratio: 0.25
size:
  words: 20
  effective_content_units: 0.08333333333333333
  sections: 1
  headings: 1
ecu_inputs:
  table_cells: 0
  diagram_nodes: 0
  diagram_edges: 0
  math_tokens: 0
  raw_html_or_mdx_lines: 0
sections:
  - section_id: 0
    heading_level: 1
    heading_text: ~
    start_line: 1
    end_line: 4
    parent_section_id: ~
    child_section_ids: []
    word_count: 20
    block_count: 1
complexity:
  reading_path_complexity: 1
  reading_path_complexity_raw: 1
  cognitive_complexity: 0
  halstead:
    operators_distinct: 2
    operators_total: 5
    operands_distinct: 21
    operands_total: 22
    vocabulary: 23
    length: 27
    volume: 122.13617281353935
    difficulty: 1.0476190476190477
    effort: 127.95218104275551
    embedded_volume: 0
    total_volume: 122.13617281353935
links:
  total: 0
  internal: 0
  relative: 0
  external: 0
  external_vendor: 0
  scholarly: 0
  issue_pr: 0
  absolute_same_repo: 0
  image: 0
  footnote: 0
  bare_url: 0
  broken: 0
  link_debt_score: 0
  information_scent_score: 0
  review_burden: 0
visuals:
  images: 0
  diagrams: 0
  diagram_nodes_total: 0
  diagram_edges_total: 0
  diagram_cycles_total: 0
  visual_scaffold_score: 0
  visual_net_effect: 0
tables:
  count: 0
  max_cells: 0
  table_burden_score: 0
  table_scaffold_score: 0
  hard_warnings: 0
maintainability:
  documentation_maintainability_index: 90.01
  section_balance_score: 0.85
  good_scaffold_score: 0
  artifact_debt_score: 0
grounding:
  repository_grounding_score: 0
  evidence_coverage_score: 0
ai_era:
  filler_lazy_structure_risk: 0.7075
  labels:
    - large-unanchored-prose
    - low-artifact-density
    - low-repository-grounding
    - specificity-scarcity
  top_contributors:
    - - large-unanchored-prose
      - 1
    - - low-artifact-density
      - 1
    - - low-repository-grounding
      - 1
review:
  review_criticality_index: 0
artifacts: []
prose:
  language_detection:
    dominant_language: en
    blocks:
      - start_line: 1
        end_line: 1
        language: en
      - start_line: 3
        end_line: 4
        language: en
  english:
    readability:
      flesch_reading_ease: ~
      flesch_kincaid_grade: ~
      gunning_fog: ~
      smog: ~
      ari: ~
      coleman_liau: ~
      dale_chall_new: ~
      dale_chall_list: ngsl-1.2
      forcast: ~
      lix: ~
      rix: ~
      ensemble_grade_band:
        - ~
        - ~
    lexical:
      mattr_50: 0.909
      hapax_ratio: 0.9
      dis_ratio: 0.1
      lexical_density: 0.545
      avg_sentence_words: 4.4
      p90_sentence_words: 6
      max_sentence_words: 6
      stddev_sentence_words: 1.96
      avg_word_chars: 4.136
      p90_word_chars: 7
      sentence_count: 5
      words_total: 22
    wording:
      passive_ratio: 0
      hedge_density: 0.091
      weasel_density: 0.091
      wordy_density: 0.045
      adverb_density: 0
      nominalization_density: 0.045
      expletive_count: 0
      lexical_illusions: 0
      cliche_density: 0
      nonword_count: 0
      long_sentence_count: 0
      wording_quality_score: 0.624
    inclusive_language:
      flags: []
      inclusive_language_score: 1
      flag_count: 0
    short_doc_warning: true
  japanese: ~
  meta:
    short_doc_warning: true
    words_counted: 22
    sentences_counted: 5
    blocks_stripped: []
